2012-06-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php: cleaned source code style.
	
	* include/ajax/visual_console_builder.ajax.php,
	godmode/reporting/visual_console_builder.editor.js: fixed the set
	status to items when change somethings that module or method to get
	status that agent to module status item.

2012-06-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/graphs/functions_gd.php, include/graphs/fgraph.php:
	cleaned source code style.
	
	* include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php,
	godmode/reporting/visual_console_builder.editor.js,
	godmode/reporting/visual_console_builder.editor.php: fixed the
	strange behavior of the bars and bubbles in the editor.

2012-06-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Include functions_gis.php file that
	was missing.

2012-06-11 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_ui.php
	 include/functions.php: Added pass of check_referer by url to
	 solve problems with autorefresh functionality.

2012-06-11 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_reporting.php
	 operation/reporting/reporting_xml.php: Fixed XML items exportation
	 and item editor for alert agent and alert event.

2012-06-09  Sancho Lerena <slerena@artica.es>

	* include/functions_config.php,
	godmode/setup/setup.php: Fixed problem removing API password from setup.

2012-06-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Improved performance of
	sub tree for policies tree view.

2012-06-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Improved performance of tree
	view for policies.

2012-06-08  Ramon Novoa  <rnovoa@artica.es>

	* include/graphs/fgraph.php: Protect against accidental output that
	  might corrupt an image.

2012-06-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_modules.php,
	include/functions_groups.php,