@@ -1859,45 +1859,61 @@ function agents_get_count_incidents ($id_agent) {
 
 // Get critical monitors by using the status code in modules.
 
-function agents_monitor_critical ($id_agent) {
+function agents_monitor_critical ($id_agent, $filter="") {
 	
-	return db_get_sql ("SELECT COUNT( DISTINCT tagente_modulo.id_agente_modulo) FROM tagente_estado, tagente, tagente_modulo WHERE tagente.disabled = 0 AND tagente_estado.utimestamp != 0 AND tagente_modulo.id_agente_modulo = tagente_estado.id_agente_modulo AND tagente_modulo.disabled = 0 AND estado = 1 AND tagente_estado.id_agente = tagente.id_agente AND tagente.id_agente = $id_agent");
+	if ($filter) {
+		$filter = " AND ".$filter;
+	}
+	
+	return db_get_sql ("SELECT COUNT( DISTINCT tagente_modulo.id_agente_modulo) FROM tagente_estado, tagente, tagente_modulo WHERE tagente.disabled = 0 AND tagente_estado.utimestamp != 0 AND tagente_modulo.id_agente_modulo = tagente_estado.id_agente_modulo AND tagente_modulo.disabled = 0 AND estado = 1 AND tagente_estado.id_agente = tagente.id_agente AND tagente.id_agente = $id_agent".$filter);
 }
 
 // Get warning monitors by using the status code in modules.
 
-function agents_monitor_warning ($id_agent) {
+function agents_monitor_warning ($id_agent, $filter="") {
 	
-	return db_get_sql ("SELECT COUNT( DISTINCT tagente_modulo.id_agente_modulo) FROM tagente_estado, tagente, tagente_modulo WHERE tagente.disabled = 0 AND tagente_estado.utimestamp != 0 AND tagente_modulo.id_agente_modulo = tagente_estado.id_agente_modulo AND tagente_modulo.disabled = 0 AND estado = 2 AND tagente_estado.id_agente = tagente.id_agente AND tagente.id_agente = $id_agent");
+	if ($filter) {
+		$filter = " AND ".$filter;
+	}
+	
+	return db_get_sql ("SELECT COUNT( DISTINCT tagente_modulo.id_agente_modulo) FROM tagente_estado, tagente, tagente_modulo WHERE tagente.disabled = 0 AND tagente_estado.utimestamp != 0 AND tagente_modulo.id_agente_modulo = tagente_estado.id_agente_modulo AND tagente_modulo.disabled = 0 AND estado = 2 AND tagente_estado.id_agente = tagente.id_agente AND tagente.id_agente = $id_agent".$filter);
 }
 
 // Get unknown monitors by using the status code in modules.
 
-function agents_monitor_unknown ($id_agent) {
+function agents_monitor_unknown ($id_agent, $filter="") {
 	
-	return db_get_sql ("SELECT COUNT( DISTINCT tagente_modulo.id_agente_modulo) FROM tagente_estado, tagente, tagente_modulo WHERE tagente.disabled = 0 AND tagente_estado.utimestamp != 0 AND tagente_modulo.id_agente_modulo = tagente_estado.id_agente_modulo AND tagente_modulo.disabled = 0 AND estado = 3 AND tagente_estado.id_agente = tagente.id_agente AND tagente.id_agente = $id_agent");
+	if ($filter) {
+		$filter = " AND ".$filter;
+	}
+	
+	return db_get_sql ("SELECT COUNT( DISTINCT tagente_modulo.id_agente_modulo) FROM tagente_estado, tagente, tagente_modulo WHERE tagente.disabled = 0 AND tagente_estado.utimestamp != 0 AND tagente_modulo.id_agente_modulo = tagente_estado.id_agente_modulo AND tagente_modulo.disabled = 0 AND estado = 3 AND tagente_estado.id_agente = tagente.id_agente AND tagente.id_agente = $id_agent".$filter);
 }
 
 // Get ok monitors by using the status code in modules.
 
-function agents_monitor_ok ($id_agent) {
+function agents_monitor_ok ($id_agent, $filter="") {
 	
-	return db_get_sql ("SELECT COUNT( DISTINCT tagente_modulo.id_agente_modulo) FROM tagente_estado, tagente, tagente_modulo WHERE tagente.disabled = 0 AND tagente_estado.utimestamp != 0 AND tagente_modulo.id_agente_modulo = tagente_estado.id_agente_modulo AND tagente_modulo.disabled = 0 AND estado = 0 AND tagente_estado.id_agente = tagente.id_agente AND tagente.id_agente = $id_agent");
+	if ($filter) {
+		$filter = " AND ".$filter;
+	}
+	
+	return db_get_sql ("SELECT COUNT( DISTINCT tagente_modulo.id_agente_modulo) FROM tagente_estado, tagente, tagente_modulo WHERE tagente.disabled = 0 AND tagente_estado.utimestamp != 0 AND tagente_modulo.id_agente_modulo = tagente_estado.id_agente_modulo AND tagente_modulo.disabled = 0 AND estado = 0 AND tagente_estado.id_agente = tagente.id_agente AND tagente.id_agente = $id_agent".$filter);
 }
 
 //Get alert fired for this agent
 
-function agents_get_alerts_fired ($id_agent) {
+function agents_get_alerts_fired ($id_agent, $filter="") {
 	
-	$modules_agent = agents_get_modules($id_agent, "id_agente_modulo");
+	$modules_agent = agents_get_modules($id_agent, "id_agente_modulo", $filter);
 	
 	if (empty($modules_agent)) {
 		return 0;
 	}
 	
 	$mod_clause = "(".implode(",", $modules_agent).")";	
-	
-	return db_get_sql ("SELECT COUNT(times_fired) FROM talert_template_modules WHERE id_agent_module IN ".$mod_clause);
+
+	return db_get_sql ("SELECT COUNT(times_fired) FROM talert_template_modules WHERE times_fired != 0 AND id_agent_module IN ".$mod_clause);
 }
 
 //Returns the alert image to display tree view
